[gd_scene load_steps=4 format=3 uid="uid://dan1dwts03wjy"]

[ext_resource type="Script" path="res://scripts/structures/furnace.gd" id="1_0d0o3"]
[ext_resource type="Texture2D" uid="uid://dkdgjbnhcnjus" path="res://assets/sprites/structures/furnace/furnace.png" id="1_gmr7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85yw8"]
size = Vector2(126, 126)

[node name="furnace" type="Area2D" groups=["destroyable"]]
script = ExtResource("1_0d0o3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_85yw8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_gmr7i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FurnaceUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 2680.0
offset_top = 600.0
offset_right = 2740.0
offset_bottom = 653.0

[node name="Panel" type="Panel" parent="CanvasLayer/FurnaceUI"]
layout_mode = 0
offset_left = -1000.0
offset_top = -496.0
offset_right = 511.0
offset_bottom = 458.0

[node name="Crafting" type="VBoxContainer" parent="CanvasLayer/FurnaceUI/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 233.0
offset_bottom = 458.0

[node name="Label" type="Label" parent="CanvasLayer/FurnaceUI/Panel/Crafting"]
layout_mode = 2
text = "Furnace"

[node name="RecipeContainer" type="VBoxContainer" parent="CanvasLayer/FurnaceUI/Panel/Crafting"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/FurnaceUI/Panel/Crafting"]
layout_mode = 2

[node name="Storage" type="VBoxContainer" parent="CanvasLayer/FurnaceUI/Panel"]
layout_mode = 0
offset_left = 265.0
offset_right = 1504.0
offset_bottom = 952.0

[node name="Label" type="Label" parent="CanvasLayer/FurnaceUI/Panel/Storage"]
layout_mode = 2
text = "Storage"

[node name="StorageContainer" type="VBoxContainer" parent="CanvasLayer/FurnaceUI/Panel/Storage"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CanvasLayer/FurnaceUI/Panel"]
layout_mode = 0
offset_left = 1456.0
offset_top = 23.0
offset_right = 1483.0
offset_bottom = 54.0
text = "X"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
